# spellChecker

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  hashtable.hpp  proj5.x  readme.md  s  spellcheck.cpp  test2.txt  testEssay.txt
withoutGUI_version/: hashtable.h  makefile  withoutgui.cpp
